--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
-Django==6.0.1
-django-extensions==3.2.3
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-
-# Celery åæ¶æ¯éå
-celery==5.3.4
-redis==5.0.1
-flower==2.0.1  # Celery çæ§å·¥å·
-
-# æ°æ®å¤çåå¯¼åº
-pandas==2.1.3
-openpyxl==3.11.0
-reportlab==4.0.7  # PDF çæ
-
-# éè¯¯è¿½è¸ªåçæ§
-sentry-sdk==1.40.2  # Sentry éè¯¯æ¥å
-
+Django==6.0.1
+django-extensions==3.2.3
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+
+# Celery 氓聮聦忙露聢忙聛炉茅聵聼氓聢聴
+celery==5.3.4
+redis==5.0.1
+flower==2.0.1  # Celery 莽聸聭忙聨搂氓路楼氓聟路
+
+# 忙聲掳忙聧庐氓陇聞莽聬聠氓聮聦氓炉录氓聡潞
+pandas==2.1.3
+openpyxl==3.11.0
+reportlab==4.0.7  # PDF 莽聰聼忙聢聬
+
+# 茅聰聶猫炉炉猫驴陆猫赂陋氓聮聦莽聸聭忙聨搂
+sentry-sdk==1.40.2  # Sentry 茅聰聶猫炉炉忙聤楼氓聭聤
+
+# Observability: Prometheus + OpenTelemetry
+django-prometheus==2.3.1
+opentelemetry-sdk==1.23.0
+opentelemetry-exporter-otlp==1.23.0
+opentelemetry-instrumentation-django==0.44b0
+opentelemetry-instrumentation-celery==0.44b0
